<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
<TableRow>

    <ImageButton
        android:id="@+id/b1"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:background="#00FFFFFF"
        android:onClick="iu"
        android:contentDescription="@string/undertones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/b1" />

    <ImageButton
        android:id="@+id/b2"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/hair"
        android:onClick="ih"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/b2" />
</TableRow>
    <TableRow>

        <ImageButton
            android:id="@+id/b3"
            android:layout_width="200dp"
            android:layout_height="190dp"
            android:background="#00FFFFFF"
            android:onClick="is"
            android:contentDescription="@string/skin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageButton8"
            app:layout_constraintVertical_bias="0.311"
            app:srcCompat="@drawable/b3" />

        <ImageButton
            android:id="@+id/b4"
            android:layout_width="200dp"
            android:layout_height="190dp"
            android:background="#00FFFFFF"
            android:onClick="in"
            android:contentDescription="@string/need"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.976"
            app:layout_constraintStart_toStartOf="@+id/imageButton8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.331"
            app:srcCompat="@drawable/b4" />
    </TableRow>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tableRow"
        android:background="#00FFFFFF">

        <ImageButton
            android:id="@+id/b5"
            android:layout_width="200dp"
            android:layout_height="190dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/tips"
            android:onClick="ir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/b5" />

        <ImageButton
            android:layout_width="211dp"
            android:layout_height="97dp"
            android:layout_marginTop="84dp"
            android:background="#00FFFFFF"
            android:onClick="im"
            app:layout_constraintTop_toBottomOf="@+id/b5"
            app:srcCompat="@drawable/arraw1"
            tools:layout_editor_absoluteX="-39dp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="120dp"
            android:layout_height="91dp"
            android:layout_marginBottom="4dp"
            android:background="#00FFFFFF"
            android:onClick="ia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/iicon" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</TableLayout>